--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;300;400&display=swap');
 
 body {
-    background-color: #85B7E4;
+    background-color: #F8F8F8;
     font-family: 'Sora', sans-serif;
     height: 100vh;
     display: flex;
